# intelligent-systems

./: .gitignore  main.py  pyproject.toml  requirements.txt
lesson-10/: main.py
lesson-13/: main.py
lesson-16/: main.py
lesson-17/: main.py
lesson-18/: hybrid_chatbot_full.py  main.py
lesson-19/: main.py
lesson-2/: cold_pred.py
lesson-3/: expert_pc_helper.py
lesson-4/: main.py  task1.py  task2.py  task3.py  task4.py  task5.py
lesson-5/: main.py
lesson-6/: main.py
lesson-7/: main.py
lesson-8/: gui.py  main.py
lesson-9/: main.py
