[project]
name = "intellektual-tizimlar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.7.2",
    "rake-nltk>=1.0.6",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "requests>=2.32.5",
    "openai>=2.8.1",
    "matplotlib>=3.10.7",
]
